<resources>
    <string name="app_name">ASOECAS</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">Contacts completions.</string>

    <string name="saludo_Bienvenida">Bienvenidos a ASOECAS.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <!-- Opciones del Menu principal-->
    <string name="action_calendario_todo">Eventos todo publico</string>
    <string name="action_calendario_futbol">Horario de partidos</string>
    <string name="action_calendario_pinpong">Horario de ping pong</string>
    <string name="action_calendario_baile">Baile</string>
    <string name="action_calendario_acti_una">Actividades Universitarias</string>
    <string name="action_calendario_acti_comu">Actividades Comunitarias</string>
    <string name="action_admin_eventos">Agregar un nuevo Evento</string>


    <string name="action_register_Event">Registrar Evento</string>


    <!-- Opciones del Acceso al sistema-->
    <string name="message_head">Mi cuenta</string>
    <string name="actionSalir">Salir</string>
    <string name="action_register">Registrarme</string>

    <string name="configuracion">Configuracion</string>
    <string name="recorUser">Recordar usuario</string>
    <string name="btnSave">Guardar</string>
    <string name="colores">Colores</string>

    <string name="titlulo_pickers">Fecha del Evento</string>
    <string name="formato_fecha">dd/mm/yyyy</string>
    <string name="formato_hora">hh:mm</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_home_user">Usuario</string>
    <string name="mensaje_Seleccion">Acceso al sistema</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--PArte Pablo-->
    <string name="cedula">Cédula</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellidos</string>
    <string name="carrera">Carrera</string>
    <string name="telefono">Teléfono</string>

    <string name="btnLogin">Iniciar sesión</string>

    <string name="usuario">Usuario</string>
    <string name="contra">Contraseña</string>

    <string name="selectcarrera">Seleccione una carrera</string>
    <string name="email">Email</string>
    <string name="text">Text</string>
    <string name="contrasena1">Contraseña</string>
    <string name="contrasena2">Repita la contraseña</string>
    <string name="validate">Registrarme</string>
    <string name="mandatory">Este campo es requerido</string>
    <string name="differentPass">Las contraseñas son diferentes</string>

    <!-- -->
</resources>
